--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,27 @@
   <link rel="stylesheet" href="/styles.css">
   <title>Productivity app</title>
 </head>
-<body>
-<h1 class="test">Starting index page of your app, example</h1>
+<body class="page">
+  <header class="header">
+    <h1 class="main-logo">
+      <a class="main-logo__link" href="#">
+        <img src="/Logo.svg" alt="logo">
+      </a>
+    </h1>
+    <nav class="header__navigation">
+      <ul class="header__navigation-list">
+        <li class="header__navigation-item"><a href="#" class="header__navigation-link"></a></li>
+        <li class="header__navigation-item"><a href="#" class="header__navigation-link"></a></li>
+        <li class="header__navigation-item"><a href="#" class="header__navigation-link"></a></li>
+        <li class="header__navigation-item"><a href="#" class="header__navigation-link"></a></li>
+        <li class="header__navigation-item"><a href="#" class="header__navigation-link"></a></li>
+      </ul>
+    </nav>
+  </header>
+  <section class="settings">
+
+  </section>
+  asdfsadf
 <script src="/bundle.js"></script>
 </body>
 </html>
