--- a/src/index.html
+++ b/src/index.html
@@ -9,25 +9,25 @@
 </head>
 <body class="page">
   <header class="header">
-    <h1 class="main-logo">
-      <a class="main-logo__link" href="#">
-        <img src="/Logo.svg" alt="logo">
-      </a>
-    </h1>
-    <nav class="header__navigation">
-      <ul class="header__navigation-list">
-        <li class="header__navigation-item"><a href="#" class="header__navigation-link"></a></li>
-        <li class="header__navigation-item"><a href="#" class="header__navigation-link"></a></li>
-        <li class="header__navigation-item"><a href="#" class="header__navigation-link"></a></li>
-        <li class="header__navigation-item"><a href="#" class="header__navigation-link"></a></li>
-        <li class="header__navigation-item"><a href="#" class="header__navigation-link"></a></li>
-      </ul>
-    </nav>
+    <div class="main-container">
+      <h1 class="header__logo">
+        <a class="header__logo-link" href="#">
+          <img class="header__logo-image" src="/Logo.svg" alt="logo">
+        </a>
+      </h1>
+      <nav class="header__menu">
+        <ul class="header__menu-list">
+          <li class="header__menu-item"><a href="#" class="header__menu-link  header__menu-link--add"></a></li>        
+          <li class="header__menu-item"><a href="#" class="header__menu-link  header__menu-link--remove"></a></li>
+          <li class="header__menu-item"><a href="#" class="header__menu-link  header__menu-link--task-list"></a></li>
+          <li class="header__menu-item"><a href="#" class="header__menu-link  header__menu-link--reports"></a></li>
+          <li class="header__menu-item"><a href="#" class="header__menu-link  header__menu-link--settings"></a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
   <section class="settings">
-
   </section>
-  asdfsadf
 <script src="/bundle.js"></script>
 </body>
 </html>
