made desktop header

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body class="page">
   <header class="header">
     <div class="main-container">
-      <h1 class="header__logo">
+      <h1 class="header__logo  hidden">
         <a class="header__logo-link" href="#">
           <img class="header__logo-image" src="/Logo.svg" alt="logo">
         </a>
@@ -27,7 +27,17 @@
     </div>
   </header>
   <section class="settings">
+    <div class="main-container">
+      <h1 class="screen-heading">Settings</h1>
+        <h2 class="subtitle">Pomodoros settings</h2>
+        <h2 class="subtitle  hidden">Categories list overview</h2>
+        <ul class="tabs  tabs--floated  tabs--upper">
+          <li class="tabs__item"><a class="tabs__link  tabs__link--active" href="#">Pomodoros</a></li>
+          <li class="tabs__item"><a class="tabs__link" href="#">Categories</a></li> 
+        </ul>   
+    </div>
   </section>
+  <div id="asd"></div>
 <script src="/bundle.js"></script>
 </body>
 </html>
