--- a/src/index.html
+++ b/src/index.html
@@ -26,19 +26,19 @@
       </nav>
     </div>
   </header>
-  <section class="screen  settings-screen">
-    <header class="screen__header">
+  <section class="settings-screen">
+    <header class="screen-header">
       <div class="main-container">
         <h1 class="screen-heading">Settings</h1>
         <h2 class="subtitle">Pomodoros settings</h2>
         <h2 class="subtitle  hidden">Categories list overview</h2>
         <ul class="tabs  tabs--floated  tabs--upper">
-          <li class="tabs__item"><a class="tabs__link  tabs__link--active" href="#">Pomodoros</a></li>
+          <li class="tabs__item"><a class="tabs__link  tabs__link--current" href="#">Pomodoros</a></li>
           <li class="tabs__item"><a class="tabs__link" href="#">Categories</a></li> 
         </ul>   
       </div>
     </header>
-    <section class="screen__body  settings-screen__body">
+    <section class="screen-body">
       <div class="main-container">
         <section class="pom-settings">
           <ul class="pom-settings__list">
@@ -84,7 +84,7 @@
           <h3 class="subtitle2">Your cycle</h3>
           <img class="settings-screen__cycle-preview-img" src="/Graph.png" alt="">
         </section>
-        <section class="settings-screen--buttons">
+        <section class="settings-screen__buttons">
           <button class="button  button--blue  settings-screen--button">Go to Tasks</button>
           <button class="button  button--green  settings-screen--button">Save</button>
         </section>
