--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       </nav>
     </div>
   </header>
-  <section class="settings-screen">
+  <section class="settings-screen  hidden">
     <header class="screen-header">
       <div class="main-container">
         <h2 class="screen-heading">Settings</h2>
@@ -38,68 +38,162 @@
         </ul>   
       </div>
     </header>
+    <section class="screen-body">
+      <div class="main-container">
+        <section class="pom-settings">
+          <ul class="pom-settings__list  list">
+            <li class="pom-settings__item  circled">
+              <span class="pom-settings__heading">WORK TIME</span>
+              <div class="pom-settings__input-wrapper">
+                <button class="pom-settings__btn  pom-settings__btn--minus"></button>
+                <button class="pom-settings__btn  pom-settings__btn--plus"></button>
+                <span class="pom-settings__input">25</span>
+              </div>
+              <p class="pom-settings__instruction">Please select a value between 15 and 25 <span class="pom-settings__highlighted">minutes</span></p>
+            </li>
+            <li class="pom-settings__item  circled">
+              <span class="pom-settings__heading">WORK ITERATION</span>
+              <div class="pom-settings__input-wrapper">
+                <button class="pom-settings__btn  pom-settings__btn--minus"></button>
+                <button class="pom-settings__btn  pom-settings__btn--plus"></button>
+                <span class="pom-settings__input">5</span>
+              </div>
+              <p class="pom-settings__instruction">Please select a value between 2 and 5 <span class="pom-settings__highlighted">iterations</span></p>
+            </li>
+            <li class="pom-settings__item  circled">
+              <span class="pom-settings__heading">SHORT BREAK</span>
+              <div class="pom-settings__input-wrapper">
+                <button class="pom-settings__btn  pom-settings__btn--minus"></button>
+                <button class="pom-settings__btn  pom-settings__btn--plus"></button>
+                <span class="pom-settings__input">5</span>
+              </div>
+              <p class="pom-settings__instruction">Please select a value between 3 and 5 <span class="pom-settings__highlighted">minutes</span></p>
+            </li>
+            <li class="pom-settings__item  circled">
+              <span class="pom-settings__heading">LONG BREAK</span>
+              <div class="pom-settings__input-wrapper">
+                <button class="pom-settings__btn  pom-settings__btn--minus"></button>
+                <button class="pom-settings__btn  pom-settings__btn--plus"></button>
+                <span class="pom-settings__input">30</span>
+              </div>
+              <p class="pom-settings__instruction">Please select a value between 15 and 25 <span class="pom-settings__highlighted">minutes</span></p>
+            </li>
+          </ul>
+          <section class="pom-settings__cycle-preview">
+            <h3 class="subtitle2">Your cycle</h3>
+            <img class="pom-settings__cycle-preview-img" src="/Graph.png" alt="">
+          </section>
+          <section class="pom-settings__buttons">
+            <button class="button  button--blue  pom-settings--button">Go to Tasks</button>
+            <button class="button  button--green  pom-settings--button">Save</button>
+          </section>
+        </section>
+        <section class="categories-settings  hidden">
+          <ul class="categories-settings__list">
+            <li class="categories-settings__list-item  circled  list">Work</li>
+            <li class="categories-settings__list-item  circled  list">Education</li>
+            <li class="categories-settings__list-item  circled  list">Hobby</li>
+            <li class="categories-settings__list-item  circled  list">Sport</li>
+            <li class="categories-settings__list-item  circled  list">Other</li>
+          </ul>
+          <button class="button button--blue">Go to Tasks</button>
+        </section>
+      </div>
+    </section>
   </section>
-  <section class="screen-body">
-    <div class="main-container">
-      <section class="pom-settings hidden">
-        <ul class="pom-settings__list  list">
-          <li class="pom-settings__item  circled">
-            <span class="pom-settings__heading">WORK TIME</span>
-            <div class="pom-settings__input-wrapper">
-              <button class="pom-settings__btn  pom-settings__btn--minus"></button>
-              <button class="pom-settings__btn  pom-settings__btn--plus"></button>
-              <span class="pom-settings__input">25</span>
-            </div>
-            <p class="pom-settings__instruction">Please select a value between 15 and 25 <span class="pom-settings__highlighted">minutes</span></p>
+
+  <section class="task-list-screen">
+    <header class="screen-header">
+      <div class="main-container">
+        <h2 class="screen-heading  task-list-screen__screen-heading">Dalily Task List<button class="task-list-screen__add-btn"></button></h2>
+        <ul class="tabs  tabs--floated  list">
+          <li class="tabs__item"><a class="tabs__link  tabs__link--current" href="#">To Do</a></li>
+          <li class="tabs__item"><a class="tabs__link" href="#">Done</a></li> 
+        </ul>   
+      </div>
+    </header>
+    <section class="screen-body">
+      <div class="main-container">
+        <ul class="task-list  list">
+          <li class="task-card  task-card--hobby  task-card--urgent-priority">
+            <section class="delete-indicator  hidden"></section>            
+            <section class="task-card__date">Today</section>
+            <section class="task-card__task-info">
+              <h3 class="task-card__task-name">Lorem ipsum sit amet</h3>
+              <p class="tasc-card__task-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+            </section>
+            <section class="task-card__buttons">
+              <section class="task-card__task-adjustsments">
+                <button class="task-card__button  task-card__button--to-daily hidden"></button>
+                <button class="task-card__button  task-card__button--edit"></button>
+              </section>
+              <button class="task-card__start"></button>
+            </section>
           </li>
-          <li class="pom-settings__item  circled">
-            <span class="pom-settings__heading">WORK ITERATION</span>
-            <div class="pom-settings__input-wrapper">
-              <button class="pom-settings__btn  pom-settings__btn--minus"></button>
-              <button class="pom-settings__btn  pom-settings__btn--plus"></button>
-              <span class="pom-settings__input">5</span>
-            </div>
-            <p class="pom-settings__instruction">Please select a value between 2 and 5 <span class="pom-settings__highlighted">iterations</span></p>
+          <li class="task-card  task-card--sport  task-card--high-priority">
+            <section class="delete-indicator  hidden"></section>            
+            <section class="task-card__date">Today</section>
+            <section class="task-card__task-info">
+              <h3 class="task-card__task-name">Lorem ipsum sit amet</h3>
+              <p class="tasc-card__task-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+            </section>
+            <section class="task-card__buttons">
+              <section class="task-card__task-adjustsments">
+                <button class="task-card__button  task-card__button--to-daily hidden"></button>
+                <button class="task-card__button  task-card__button--edit"></button>
+              </section>
+              <button class="task-card__start"></button>
+            </section>
           </li>
-          <li class="pom-settings__item  circled">
-            <span class="pom-settings__heading">SHORT BREAK</span>
-            <div class="pom-settings__input-wrapper">
-              <button class="pom-settings__btn  pom-settings__btn--minus"></button>
-              <button class="pom-settings__btn  pom-settings__btn--plus"></button>
-              <span class="pom-settings__input">5</span>
-            </div>
-            <p class="pom-settings__instruction">Please select a value between 3 and 5 <span class="pom-settings__highlighted">minutes</span></p>
+          <li class="task-card  task-card--work  task-card--middle-priority">
+            <section class="delete-indicator  hidden"></section>            
+            <section class="task-card__date">Today</section>
+            <section class="task-card__task-info">
+              <h3 class="task-card__task-name">Lorem ipsum sit amet</h3>
+              <p class="tasc-card__task-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+            </section>
+            <section class="task-card__buttons">
+              <section class="task-card__task-adjustsments">
+                <button class="task-card__button  task-card__button--to-daily hidden"></button>
+                <button class="task-card__button  task-card__button--edit"></button>
+              </section>
+              <button class="task-card__start"></button>
+            </section>
           </li>
-          <li class="pom-settings__item  circled">
-            <span class="pom-settings__heading">LONG BREAK</span>
-            <div class="pom-settings__input-wrapper">
-              <button class="pom-settings__btn  pom-settings__btn--minus"></button>
-              <button class="pom-settings__btn  pom-settings__btn--plus"></button>
-              <span class="pom-settings__input">30</span>
-            </div>
-            <p class="pom-settings__instruction">Please select a value between 15 and 25 <span class="pom-settings__highlighted">minutes</span></p>
+          <li class="task-card  task-card--education  task-card--middle-priority">
+            <section class="delete-indicator  hidden"></section>            
+            <section class="task-card__date">Today</section>
+            <section class="task-card__task-info">
+              <h3 class="task-card__task-name">Lorem ipsum sit amet</h3>
+              <p class="tasc-card__task-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+            </section>
+            <section class="task-card__buttons">
+              <section class="task-card__task-adjustsments">
+                <button class="task-card__button  task-card__button--to-daily hidden"></button>
+                <button class="task-card__button  task-card__button--edit"></button>
+              </section>
+              <button class="task-card__start"></button>
+            </section>
+          </li>
+          <li class="task-card  task-card--other  task-card--low-priority">
+            <section class="delete-indicator  hidden"></section>            
+            <section class="task-card__date">Today</section>
+            <section class="task-card__task-info">
+              <h3 class="task-card__task-name">Lorem ipsum sit amet</h3>
+              <p class="tasc-card__task-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+            </section>
+            <section class="task-card__buttons">
+              <section class="task-card__task-adjustsments">
+                <button class="task-card__button  task-card__button--to-daily hidden"></button>
+                <button class="task-card__button  task-card__button--edit"></button>
+              </section>
+              <button class="task-card__start"></button>
+            </section>
           </li>
         </ul>
-        <section class="pom-settings__cycle-preview">
-          <h3 class="subtitle2">Your cycle</h3>
-          <img class="pom-settings__cycle-preview-img" src="/Graph.png" alt="">
-        </section>
-        <section class="pom-settings__buttons">
-          <button class="button  button--blue  pom-settings--button">Go to Tasks</button>
-          <button class="button  button--green  pom-settings--button">Save</button>
-        </section>
-      </section>
-      <section class="categories-settings">
-        <ul class="categories-settings__list">
-          <li class="categories-settings__list-item  circled  list">Work</li>
-          <li class="categories-settings__list-item  circled  list">Education</li>
-          <li class="categories-settings__list-item  circled  list">Hobby</li>
-          <li class="categories-settings__list-item  circled  list">Sport</li>
-          <li class="categories-settings__list-item  circled  list">Other</li>
-        </ul>
-        <button class="button button--blue">Go to Tasks</button>
-      </section>
-    </div>
+        <button class="task-list-screen__global-list-toggler">Global list </button>
+      </div>
+    </section>
   </section>
 <script src="/bundle.js"></script>
 </body>
