mede global list section

--- a/src/index.html
+++ b/src/index.html
@@ -192,6 +192,80 @@
           </li>
         </ul>
         <button class="task-list-screen__global-list-toggler">Global list </button>
+
+        <section class="global-list">
+          <div class="global-list__tabs-wrapper">
+            <ul class="tabs  tabs--floated  list">
+              <li class="tabs__item"><a class="tabs__link  tabs__link--current" href="#">All</a></li>
+              <li class="tabs__item"><a class="tabs__link" href="#">Urgent</a></li>
+              <li class="tabs__item"><a class="tabs__link" href="#">High</a></li>
+              <li class="tabs__item"><a class="tabs__link" href="#">Middle</a></li>  
+              <li class="tabs__item"><a class="tabs__link" href="#">Low</a></li>        
+            </ul> 
+          </div>
+          <ul class="task-list  task-list--categorized  task-list--categorized-work  task-list--work  list">
+            <div class="task-list__decorative-line">
+              <div class="task-list__decorative-circle">
+                <div class="task-list__decorative-inner-circle"></div>
+              </div>
+            </div>
+            <h3 class="task-list__heading  task-list__heading--work">Work</h3>            
+            <li class="task-card  task-card--work  task-card--high-priority  task-card--no-border">
+              <section class="delete-indicator  hidden"></section>            
+              <section class="task-card__date">Today</section>
+              <section class="task-card__task-info">
+                <h3 class="task-card__task-name">Lorem ipsum sit amet</h3>
+                <p class="tasc-card__task-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+              </section>
+              <section class="task-card__buttons">
+                <section class="task-card__task-adjustsments">
+                  <button class="task-card__button  task-card__button--to-daily"></button>
+                  <button class="task-card__button  task-card__button--edit"></button>
+                </section>
+                <button class="task-card__start"></button>
+            </section>
+            </li>
+            <li class="task-card  task-card--work  task-card--middle-priority  task-card--no-border">
+              <section class="delete-indicator  hidden"></section>            
+              <section class="task-card__date">Today</section>
+              <section class="task-card__task-info">
+                <h3 class="task-card__task-name">Lorem ipsum sit amet</h3>
+                <p class="tasc-card__task-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+              </section>
+              <section class="task-card__buttons">
+                <section class="task-card__task-adjustsments">
+                  <button class="task-card__button  task-card__button--to-daily"></button>
+                  <button class="task-card__button  task-card__button--edit"></button>
+                </section>
+                <button class="task-card__start"></button>
+              </section>
+            </li>
+          </ul>
+
+          <ul class="task-list  task-list--categorized  task-list--categorized-education  task-list--work  list">
+            <div class="task-list__decorative-line">
+              <div class="task-list__decorative-circle">
+                <div class="task-list__decorative-inner-circle"></div>
+              </div>
+            </div>
+            <h3 class="task-list__heading  task-list__heading--education">Education</h3>
+            <li class="task-card  task-card--education  task-card--low-priority  task-card--no-border">
+              <section class="delete-indicator  hidden"></section>            
+              <section class="task-card__date">Today</section>
+              <section class="task-card__task-info">
+                <h3 class="task-card__task-name">Lorem ipsum sit amet</h3>
+                <p class="tasc-card__task-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+              </section>
+              <section class="task-card__buttons">
+                <section class="task-card__task-adjustsments">
+                  <button class="task-card__button  task-card__button--to-daily"></button>
+                  <button class="task-card__button  task-card__button--edit"></button>
+                </section>
+                <button class="task-card__start"></button>
+            </section>
+            </li>
+          </ul>       
+        </section>
       </div>
     </section>
   </section>
