--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,8 @@
         <h3 class="subtitle">Pomodoros settings</h3>
         <h3 class="subtitle  hidden">Categories list overview</h3>
         <ul class="tabs tabs--right tabs--upper list">
-          <li class="tabs__item"><a class="tabs__link tabs__link--current" href="#">Pomodoros</a></li>
-          <li class="tabs__item"><a class="tabs__link" href="#">Categories</a></li> 
+          <li class="tabs__item"><button class="tabs__btn tabs__btn--current">Pomodoros</button></li>
+          <li class="tabs__item"><button class="tabs__btn" >Categories</button></li> 
         </ul>   
       </div>
     </header>
@@ -110,12 +110,12 @@
         <h1 class="screen-heading task-list-screen__screen-heading">Dalily Task List<button class="task-list-screen__add-btn"></button></h1>
         <div class="today-tasks__tabs-wrapper">
             <ul class="tabs tabs--right list">
-              <li class="tabs__item"><a class="tabs__link tabs__link--current" href="#">To Do</a></li>
-              <li class="tabs__item"><a class="tabs__link" href="#">Done</a></li> 
+              <li class="tabs__item"><button class="tabs__btn tabs__btn--current">To Do</button></li>
+              <li class="tabs__item"><button class="tabs__btn">Done</button></li> 
             </ul>   
             <ul class="tabs  tabs--left tabs--remove  list">
-              <li class="tabs__item"><a class="tabs__link  tabs__link--current" href="#">Select All</a></li>
-              <li class="tabs__item"><a class="tabs__link" href="#">Deselect all</a></li> 
+              <li class="tabs__item"><button class="tabs__btn  tabs__btn--current" href="#">Select All</button></li>
+              <li class="tabs__item"><button class="tabs__btn">Deselect all</button></li> 
             </ul>   
           </div>
       </div>
@@ -231,11 +231,11 @@
         <section class="global-list ">          
           <div class="global-list__tabs-wrapper">
             <ul class="tabs  tabs--right  list">
-              <li class="tabs__item"><a class="tabs__link tabs__link--current" href="#">All</a></li>
-              <li class="tabs__item"><a class="tabs__link" href="#">Urgent</a></li>
-              <li class="tabs__item"><a class="tabs__link" href="#">High</a></li>
-              <li class="tabs__item"><a class="tabs__link" href="#">Middle</a></li>  
-              <li class="tabs__item"><a class="tabs__link" href="#">Low</a></li>        
+              <li class="tabs__item"><button class="tabs__btn tabs__btn--current">All</button></li>
+              <li class="tabs__item"><button class="tabs__btn">Urgent</button></li>
+              <li class="tabs__item"><button class="tabs__btn">High</button></li>
+              <li class="tabs__item"><button class="tabs__btn">Middle</button></li>  
+              <li class="tabs__item"><button class="tabs__btn">Low</button></li>        
             </ul> 
           </div>
           <ul class="task-list  task-list--categorized task-list--categorized-work task-list--work list">
@@ -463,17 +463,17 @@
       <header class="screen-header">
         <h1 class="screen-heading task-list-screen__screen-heading">Reports</h1>
         <ul class="tabs list">
-          <li class="tabs__item"><a class="tabs__link" href="#">Day</a></li>
-          <li class="tabs__item"><a class="tabs__link" href="#">Week</a></li>  
-          <li class="tabs__item"><a class="tabs__link" href="#">Month</a></li>        
+          <li class="tabs__item"><button class="tabs__btn">Day</button></li>
+          <li class="tabs__item"><button class="tabs__btn">Week</button></li>  
+          <li class="tabs__item"><button class="tabs__btn">Month</button></li>        
         </ul> 
       </header>
       <section class="reports-screen__report">
         <img src="/chart.png" alt="" class="reports-screen__img">
       </section>
       <ul class="tabs  list">
-        <li class="tabs__item"><a class="tabs__link" href="#">Pomodoros</a></li>
-        <li class="tabs__item"><a class="tabs__link" href="#">Task</a></li>  
+        <li class="tabs__item"><button class="tabs__btn">Pomodoros</button></li>
+        <li class="tabs__item"><button class="tabs__btn">Task</button></li>  
       </ul>
     </div>
     <section class="screen-arrows">
