make header whith class

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       </h1>
       <nav class="header__menu">
         <ul class="header__menu-list list">
-          <li class="header__menu-item"><a href="#" class="header__menu-link header__menu-link--add hidden"></a></li>        
+          <li class="header__menu-item"><a href="#" class="header__menu-link header__menu-link--add"></a></li>    
           <li class="header__menu-item"><a href="#" class="header__menu-link header__menu-link--remove"></a></li>
           <li class="header__menu-item"><a href="#" class="header__menu-link header__menu-link--task-list"></a></li>
           <li class="header__menu-item"><a href="#" class="header__menu-link header__menu-link--reports"></a></li>
@@ -488,6 +488,10 @@
     <button class="notification__close-btn"></button>
   </section>
   <div class="screen-tint hidden"></div>
+
+
+<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
 <script src="/bundle.js"></script>  
 </body>
 </html>
