--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
       <nav class="header__menu">
         <ul class="header__menu-list list">
           <li class="header__menu-item"><button href="/add" class="header__menu-link header__menu-link--add modal-button" data-modal-action="modal-add"></button></li>    
-          <li class="header__menu-item"><a href="/#" class="header__menu-link header__menu-link--remove"></a></li>
-          <li class="header__menu-item"><a href="/task-list" class="header__menu-link header__menu-link--task-list"></a></li>
-          <li class="header__menu-item"><a href="/reports" class="header__menu-link header__menu-link--reports"></a></li>
-          <li class="header__menu-item"><a href="/settings" class="header__menu-link header__menu-link--settings"></a></li>
+          <li class="header__menu-item"><button href="/#" class="header__menu-link header__menu-link--remove"></button></li>
+          <li class="header__menu-item"><a href="/task-list" class="header__menu-link header__menu-link--task-list router-link"></a></li>
+          <li class="header__menu-item"><a href="/reports" class="header__menu-link header__menu-link--reports router-link"></a></li>
+          <li class="header__menu-item"><a href="/settings" class="header__menu-link header__menu-link--settings router-link"></a></li>
         </ul>
       </nav>
     </div>
