--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <nav class="header__menu">
         <ul class="header__menu-list list">
           <li class="header__menu-item"><button href="/add" class="header__menu-link header__menu-link--add modal-button" data-modal-action="modal-open-add"></button></li>    
-          <li class="header__menu-item"><button href="/#" class="header__menu-link header__menu-link--remove"></button></li>
+          <li class="header__menu-item"><button class="header__menu-link header__menu-link--remove" id="remove-mode"></button></li>
           <li class="header__menu-item"><a href="/task-list" class="header__menu-link header__menu-link--task-list router-link"></a></li>
           <li class="header__menu-item"><a href="/reports" class="header__menu-link header__menu-link--reports router-link"></a></li>
           <li class="header__menu-item"><a href="/settings" class="header__menu-link header__menu-link--settings router-link"></a></li>
