--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,14 @@
           <img class="header__logo-image" src="/Logo.svg" alt="logo">
         </a>
       </h1>
+      <div class="header__mobile-wrapper">
+        <h2 class="screen-heading screen-heading--mobile"></h2>
+        <button class="task-list-screen__add-btn task-list-screen__add-btn--header modal-button" data-modal-action="modal-open-add"></button>
+      </div>
       <nav class="header__menu">
         <ul class="header__menu-list list">
-          <li class="header__menu-item"><button href="/add" class="header__menu-link header__menu-link--add modal-button" data-modal-action="modal-open-add"></button></li>    
-          <li class="header__menu-item"><button class="header__menu-link header__menu-link--remove" id="remove-mode"><span class="header__remove-count hidden" id="tasks-remove-count"></span> </button></li>
+          <li class="header__menu-item task-list-only"><button class="header__menu-link header__menu-link--add modal-button router-link link" data-modal-action="modal-open-add"></button></li>
+          <li class="header__menu-item task-list-only"><button class="header__menu-link header__menu-link--remove link" id="remove-mode"><span class="header__remove-count hidden" id="tasks-remove-count"></span> </button></li>
           <li class="header__menu-item"><a href="/task-list" class="header__menu-link header__menu-link--task-list router-link"></a></li>
           <li class="header__menu-item"><a href="/reports" class="header__menu-link header__menu-link--reports router-link"></a></li>
           <li class="header__menu-item"><a href="/settings" class="header__menu-link header__menu-link--settings router-link"></a></li>
@@ -30,10 +34,10 @@
   <div class="screen-container">
 
   </div>
-  
+
 
 <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
-<script src="/bundle.js"></script>  
+<script src="/bundle.js"></script>
 </body>
 </html>
