--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <h2 class="screen-heading screen-heading--mobile"></h2>
         <button class="task-list-screen__add-btn task-list-screen__add-btn--header modal-button" data-modal-action="modal-open-add"></button>
       </div>
-      <nav class="header__menu">
+      <nav class="header__menu" id="header_navigation">
         <ul class="header__menu-list list">
           <li class="header__menu-item task-list-only"><button class="header__menu-link header__menu-link--add modal-button router-link link" data-modal-action="modal-open-add"></button></li>
           <li class="header__menu-item task-list-only"><button class="header__menu-link header__menu-link--remove link" id="remove-mode"><span class="header__remove-count hidden" id="tasks-remove-count"></span> </button></li>
