add settings firebase integration

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/styles.css">
   <title>Productivity app</title>
 </head>
-<body class="page">
+<body class="page" id="page">
   <div class="modal-wrapper"></div>
   <header class="header">
     <div class="main-container header__sticky-flex-wrapper">
